create searchfield form

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
       <main>
         <h2>Content Will Go Here</h2>
-        <form>
-          <input type='search' placeholder='Name of Pokemon?'>
+        <form class='pokedexsearch'>
+          <input class='searchvalue' type='search' placeholder='Name of Pokemon?'>
           <input type='submit' value='Search'>
         </form>
         <p>There will be more info here</p>
