add some elements which will be updated with pokemons info

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
           <input class='searchvalue' type='search' placeholder='Name of Pokemon?'>
           <input type='submit' value='Search'>
         </form>
-        <p>There will be more info here</p>
+        
+        <div class='pokemoncard'>
+          <h3></h3>
+          <img>
+          <p>
+            
+          </p>
+        </div>
       </main>
     </div>
 
