add classnames to pokemon card

--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
         </form>
         
         <div class='pokemoncard'>
-          <h3></h3>
-          <img>
-          <p>
-            
-          </p>
+          <h3 class='pokemonname'></h3>
+          <img class='pokemonsprite'>
+          <p class='pokemoninfo'></p>
         </div>
       </main>
     </div>
