create div for pokemon abilities

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
         
         <div class='pokemoncard'>
           <h3 class='pokemonname'></h3>
-          <img class='pokemonsprite'>
-          <p class='pokemoninfo'></p>
+          <img class='pokemonspritefront'>
+          <img class='pokemonspriteback'>
+          <div class='pokemoninfo'>
+            
+          </div>
         </div>
       </main>
     </div>
