add and style screen and surrounding elements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class='container'>
-    <h1>POKéMON</h1>
+    <h1>POKéDEX</h1>
 
     <div class='content'>
       <nav>
@@ -22,32 +22,36 @@
       </nav>
 
       <main>
-        <h2>Content Will Go Here</h2>
+        <h2>Welcome!</h2>
         <form class='pokedexsearch'>
           <input class='searchvalue' type='search' placeholder='Name of Pokemon?'>
           <input type='submit' value='Search'>
         </form>
         
-        <div class='pokemoncard'>
-          <h3 class='pokemonname'></h3>
+        <div class='screen'>
+          <div class='pokemoncard'>
+            <h3 class='pokemonname'></h3>
 
-          <div class='pokemontypes'>
+            <div class='pokemontypes'>
 
+            </div>
+
+            <img class='pokemonspritefront'>
+            <img class='pokemonspriteback'>
+
+            <p class='pokemonheight'></p>
+            <p class='pokemonweight'></p>
+
+            <h4 class='abilitiesheader'></h4>
+            <div class='pokemoninfo'>
+
+            </div>
           </div>
-
-          <img class='pokemonspritefront'>
-          <img class='pokemonspriteback'>
-
-          <p class='pokemonheight'></p>
-          <p class='pokemonweight'></p>
-          
-          <h4 class='abilitiesheader'></h4>
-          <div class='pokemoninfo'>
-
-          </div>
-        </div>
+      </div>
       </main>
     </div>
+
+    <footer></footer>
 
     <script src="main.js"></script>
   </body>
