rearrange items for styling purposes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </form>
         
         <div class='screen'>
+            <img class='pokemonspritefront'>
+          
           <div class='pokemoncard'>
             <h3 class='pokemonname'></h3>
 
@@ -36,11 +38,10 @@
 
             </div>
 
-            <img class='pokemonspritefront'>
-            <img class='pokemonspriteback'>
-
-            <p class='pokemonheight'></p>
-            <p class='pokemonweight'></p>
+            <div class='pokemonsizes'>
+              <p class='pokemonheight'></p>
+              <p class='pokemonweight'></p>
+            </div>
 
             <h4 class='abilitiesheader'></h4>
             <div class='pokemoninfo'>
