--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
       <nav>
         <ul>
           <li class='box'><a href='#'>Pokedex</a></li>
-          <li class='box'><a href='#'>About</a></li>
+          <li class='box'><a href='./about.html'>About</a></li>
         </ul>
       </nav>
 
       <main>
         <h2>Welcome!</h2>
+        <p>Quick Tip: Enable CORS (Cross Origin Resource Sharing) on your desktop to be able to search.</p>
         <form class='pokedexsearch'>
           <input class='searchvalue' type='search' placeholder='Name of Pokemon?'>
           <input type='submit' value='Search'>
